# homestream_client

./: .gitignore  LICENSE  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish-to-auto-release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  setup.rs
src-tauri/src/utils/: explore.rs  ftp.rs  mod.rs  tmdb.rs  types.rs
src/assets/: index.css
src/components/image/: TMDBImage.vue  index.ts
src/components/navbar/: NavBar.vue
src/components/settings/: SettingsMenu.vue  index.ts
src/components/tree/: TreeItem.vue  TreeLeaf.vue  TreeNode.vue  TreeSelector.vue  TreeViewer.vue  index.ts
src/lib/: stores.ts
src/router/: index.ts
src/translations/: english.ts  french.ts  index.ts
src/utils/: languages.ts  recommendations.ts  types.ts  video.ts
src/views/: BrowseView.vue  DetailsView.vue  HomeView.vue  OfflineView.vue  ProfilesView.vue  RegisterView.vue  SearchView.vue  SettingsView.vue  WatchView.vue
