[package]
name = "homestream"
version = "1.0.4"
description = "HomeStream"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "homestream_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tauri-plugin-http = { version = "2.0.3", features = ["rustls-tls"] }
tokio = "1.41.0"
tauri-plugin-fs = "2.0.3"
tauri-plugin-pinia = { version = "0.7", features = ["unstable-async"] }
tauri-plugin-store = "2.1.0"
tauri-plugin-notification = "2.0.1"
tauri-plugin-process = "2.0.1"

[profile.dev]
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.2"
tauri-plugin-websocket = "2.0.1"
tauri-plugin-window-state = "2.0.2"
