[package]
name = "homestream"
version = "1.0.4"
description = "HomeStream"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "homestream_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tauri-plugin-http = { version = "2.2.0", features = ["rustls-tls"] }
tokio = "1.42.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-pinia = { version = "0.8.2", features = ["unstable-async"] }
tauri-plugin-store = "2.2.0"
tauri-plugin-notification = "2.2.0"
tauri-plugin-process = "2.2.0"

[profile.dev]
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.3.0"
tauri-plugin-websocket = "2.2.0"
tauri-plugin-window-state = "2.2.0"
